--- a/main.html
+++ b/main.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Job Application Form</title>
+    <style>
+        /* Add your custom CSS styles here */
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+    <form action="/submit" method="post">
+        <div>
+            <label for="name">Name*</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div>
+            <label for="email">Email*</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div>
+            <p>Gender*</p>
+            <input type="radio" id="male" name="gender" value="male" required>
+            <label for="male">Male</label>
+            <input type="radio" id="female" name="gender" value="female" required>
+            <label for="female">Female</label>
+        </div>
+        <div>
+            <label for="laptop">Laptop Brands</label>
+            <select id="laptop" name="laptop">
+                <option value="apple">Apple</option>
+                <option value="asus">Asus</option>
+                <option value="hp">HP</option>
+            </select>
+        </div>
+        <div>
+            <label for="age">Age*</label>
+            <input type="number" id="age" name="age" required>
+        </div>
+        <div>
+            <label for="dob">Date of Birth*</label>
+            <input type="date" id="dob" name="dob" required>
+        </div>
+        <div>
+            <label for="password">Password*</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div>
+            <label for="portfolio">Portfolio URL</label>
+            <input type="url" id="portfolio" name="portfolio
